# mysmartctl

./: AUTHORS  LICENSE  README  autogen.sh  configure.ac
data/: Makefile.am  Makefile.sample
src/: Makefile.am  mysmartctl.c
